Travis build: Update Documentation under travis build : 2623

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -233,7 +233,7 @@
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv26config">config (C++ class)</a>
 
       <ul>
-        <li><a href="docs/fpga_api/fpga_api.html#_CPPv26config">(C++ member)</a>
+        <li><a href="docs/fpga_api/fpga_api.html#_CPPv26config">(C++ member)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv26config">[1]</a>
 </li>
       </ul></li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6targetE">config::target (C++ class)</a>
@@ -246,8 +246,6 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6target10open_flagsE">config::target::open_flags (C++ member)</a>
-</li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEH">CSR_AFU_DSM_BASEH (C macro)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEL">CSR_AFU_DSM_BASEL (C macro)</a>
@@ -276,7 +274,7 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv29find_fpga9fpga_guidP10fpga_tokenP8uint32_t">find_fpga (C++ function)</a>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv29find_fpga9fpga_guidP10fpga_tokenP8uint32_t">find_fpga (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv29find_fpgaP10fpga_tokenP8uint32_t">[1]</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#c.FME_SYSFS_INJECT_ERROR">FME_SYSFS_INJECT_ERROR (C macro)</a>
 </li>
@@ -526,11 +524,11 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv212get_bus_info10fpga_tokenP8bdf_info">get_bus_info (C++ function)</a>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv212get_bus_info10fpga_tokenP8bdf_info">get_bus_info (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv212get_bus_info10fpga_tokenP8bdf_info">[1]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#c.GETOPT_STRING">GETOPT_STRING (C macro)</a>
+      <li><a href="docs/fpga_api/fpga_api.html#c.GETOPT_STRING">GETOPT_STRING (C macro)</a>, <a href="docs/fpga_api/fpga_api.html#c.GETOPT_STRING">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -954,11 +952,11 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv210parse_argsiA_Pc">parse_args (C++ function)</a>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv210parse_argsiA_Pc">parse_args (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv210parse_argsiA_Pc">[1]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv214print_bus_infoP8bdf_info">print_bus_info (C++ function)</a>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv214print_bus_infoP8bdf_info">print_bus_info (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv214print_bus_infoP8bdf_info">[1]</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">print_err (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">[1]</a>
 </li>
