Travis build: Update Documentation under travis build : 2692

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -774,7 +774,7 @@
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties8functionE">opae::fpga::types::properties::function (C++ member)</a>
 </li>
-      <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getE10fpga_token">opae::fpga::types::properties::get (C++ function)</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getE12fpga_objtype">[1]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getE9fpga_guid">[2]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getENSt10shared_ptrI5tokenEE">[3]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getEv">[4]</a>
+      <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getE10fpga_token">opae::fpga::types::properties::get (C++ function)</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getE12fpga_objtype">[1]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getE9fpga_guid">[2]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getENSt10shared_ptrI5tokenEE">[3]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getENSt10shared_ptrI6handleEE">[4]</a>, <a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties3getEv">[5]</a>
 </li>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#_CPPv2N4opae4fpga5types10properties4guidE">opae::fpga::types::properties::guid (C++ member)</a>
 </li>
