Travis build: Update Documentation under travis build : 3360

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -188,9 +188,9 @@
 
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
- | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
@@ -200,6 +200,7 @@
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
+ | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  
 </div>
@@ -207,18 +208,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_cxx_api.html#c.ASSERT_FPGA_OK">ASSERT_FPGA_OK (C macro)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="B">B</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv28bdf_info">bdf_info (C++ class)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N8bdf_info3busE">bdf_info::bus (C++ member)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -233,19 +222,21 @@
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv26config">config (C++ class)</a>
 
       <ul>
-        <li><a href="docs/fpga_api/fpga_api.html#_CPPv26config">(C++ member)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv26config">[1]</a>
+        <li><a href="docs/fpga_api/fpga_api.html#_CPPv26config">(C++ member)</a>
 </li>
       </ul></li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config10open_flagsE">config::open_flags (C++ member)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6targetE">config::target (C++ class)</a>
 
       <ul>
         <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6targetE">(C++ member)</a>
 </li>
       </ul></li>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6target3busE">config::target::bus (C++ member)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N6config6target3busE">config::target::bus (C++ member)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEH">CSR_AFU_DSM_BASEH (C macro)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#c.CSR_AFU_DSM_BASEL">CSR_AFU_DSM_BASEL (C macro)</a>
@@ -267,6 +258,28 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#c.DSM_STATUS_TEST_COMPLETE">DSM_STATUS_TEST_COMPLETE (C macro)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv213events_config">events_config (C++ class)</a>
+
+      <ul>
+        <li><a href="docs/fpga_api/fpga_api.html#_CPPv213events_config">(C++ member)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N13events_config6targetE">events_config::target (C++ class)</a>
+
+      <ul>
+        <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N13events_config6targetE">(C++ member)</a>
+</li>
+      </ul></li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N13events_config6target3busE">events_config::target::bus (C++ member)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -334,6 +347,18 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv218FPGA_NOT_SUPPORTED">FPGA_NOT_SUPPORTED (C++ enumerator)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpga_object">fpga_object (C++ type)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv216FPGA_OBJECT_GLOB">FPGA_OBJECT_GLOB (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv215FPGA_OBJECT_RAW">FPGA_OBJECT_RAW (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv223FPGA_OBJECT_RECURSE_ALL">FPGA_OBJECT_RECURSE_ALL (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv223FPGA_OBJECT_RECURSE_ONE">FPGA_OBJECT_RECURSE_ONE (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv216FPGA_OBJECT_SYNC">FPGA_OBJECT_SYNC (C++ enumerator)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv212fpga_objtype">fpga_objtype (C++ type)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv27FPGA_OK">FPGA_OK (C++ enumerator)</a>
@@ -351,6 +376,8 @@
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv217FPGA_RECONF_FORCE">FPGA_RECONF_FORCE (C++ enumerator)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpga_result">fpga_result (C++ type)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv220fpga_sysobject_flags">fpga_sysobject_flags (C++ type)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv210fpga_token">fpga_token (C++ type)</a>
 </li>
@@ -388,14 +415,14 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv216fpgaGetIOAddress11fpga_handle8uint64_tP8uint64_t">fpgaGetIOAddress (C++ function)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetNumUmsg11fpga_handleP8uint64_t">fpgaGetNumUmsg (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv230fpgaGetOSObjectFromEventHandleK17fpga_event_handlePi">fpgaGetOSObjectFromEventHandle (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv217fpgaGetProperties10fpga_tokenP15fpga_properties">fpgaGetProperties (C++ function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv227fpgaGetPropertiesFromHandle11fpga_handleP15fpga_properties">fpgaGetPropertiesFromHandle (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetUmsgPtr11fpga_handlePP8uint64_t">fpgaGetUmsgPtr (C++ function)</a>
@@ -524,7 +551,7 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv212get_bus_info10fpga_tokenP8bdf_info">get_bus_info (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv212get_bus_info10fpga_tokenP8bdf_info">[1]</a>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv27get_bus10fpga_tokenP7uint8_t">get_bus (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv27get_bus10fpga_tokenP7uint8_t">[1]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -956,8 +983,6 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#_CPPv214print_bus_infoP8bdf_info">print_bus_info (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv214print_bus_infoP8bdf_info">[1]</a>
-</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">print_err (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv29print_errPKc11fpga_result">[1]</a>
 </li>
   </ul></td>
@@ -967,6 +992,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv216ras_inject_error">ras_inject_error (C++ class)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#c.TEST_TIMEOUT">TEST_TIMEOUT (C macro)</a>
 </li>
   </ul></td>
 </tr></table>
