--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -265,6 +265,8 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv212error_threadPv">error_thread (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv213events_config">events_config (C++ class)</a>
 
       <ul>
