Travis build: Update Documentation under travis build : 3571

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -337,6 +337,56 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv218FPGA_INVALID_PARAM">FPGA_INVALID_PARAM (C++ enumerator)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpga_metric">fpga_metric (C++ class)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N11fpga_metric10metric_numE">fpga_metric::metric_num (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N11fpga_metric5valueE">fpga_metric::value (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv220fpga_metric_datatype">fpga_metric_datatype (C++ type)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv225FPGA_METRIC_DATATYPE_BOOL">FPGA_METRIC_DATATYPE_BOOL (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv227FPGA_METRIC_DATATYPE_DOUBLE">FPGA_METRIC_DATATYPE_DOUBLE (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv226FPGA_METRIC_DATATYPE_FLOAT">FPGA_METRIC_DATATYPE_FLOAT (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv224FPGA_METRIC_DATATYPE_INT">FPGA_METRIC_DATATYPE_INT (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv228FPGA_METRIC_DATATYPE_UNKNOWN">FPGA_METRIC_DATATYPE_UNKNOWN (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv216fpga_metric_info">fpga_metric_info (C++ class)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16fpga_metric_info10group_nameE">fpga_metric_info::group_name (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16fpga_metric_info15metric_datatypeE">fpga_metric_info::metric_datatype (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16fpga_metric_info11metric_guidE">fpga_metric_info::metric_guid (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16fpga_metric_info11metric_nameE">fpga_metric_info::metric_name (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16fpga_metric_info10metric_numE">fpga_metric_info::metric_num (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16fpga_metric_info11metric_typeE">fpga_metric_info::metric_type (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16fpga_metric_info12metric_unitsE">fpga_metric_info::metric_units (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16fpga_metric_info14qualifier_nameE">fpga_metric_info::qualifier_name (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.FPGA_METRIC_STR_SIZE">FPGA_METRIC_STR_SIZE (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv216fpga_metric_type">fpga_metric_type (C++ type)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv220FPGA_METRIC_TYPE_AFU">FPGA_METRIC_TYPE_AFU (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv232FPGA_METRIC_TYPE_PERFORMANCE_CTR">FPGA_METRIC_TYPE_PERFORMANCE_CTR (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv222FPGA_METRIC_TYPE_POWER">FPGA_METRIC_TYPE_POWER (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv224FPGA_METRIC_TYPE_THERMAL">FPGA_METRIC_TYPE_THERMAL (C++ enumerator)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv224FPGA_METRIC_TYPE_UNKNOWN">FPGA_METRIC_TYPE_UNKNOWN (C++ enumerator)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214FPGA_NO_ACCESS">FPGA_NO_ACCESS (C++ enumerator)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214FPGA_NO_DAEMON">FPGA_NO_DAEMON (C++ enumerator)</a>
@@ -391,6 +441,8 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N12fpga_version5patchE">fpga_version::patch (C++ member)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv225fpgaAssignPortToInterface11fpga_handle8uint32_t8uint32_ti">fpgaAssignPortToInterface (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv221fpgaAssignToInterface11fpga_handle10fpga_token8uint32_ti">fpgaAssignToInterface (C++ function)</a>
@@ -417,8 +469,6 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv216fpgaGetIOAddress11fpga_handle8uint64_tP8uint64_t">fpgaGetIOAddress (C++ function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetNumUmsg11fpga_handleP8uint64_t">fpgaGetNumUmsg (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv230fpgaGetOSObjectFromEventHandleK17fpga_event_handlePi">fpgaGetOSObjectFromEventHandle (C++ function)</a>
@@ -591,9 +641,19 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv24mainiA_Pc">main (C++ function)</a>, <a href="docs/fpga_api/fpga_api.html#_CPPv24mainiA_Pc">[1]</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#c.MB">MB (C macro)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv212metric_value">metric_value (C++ type)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="docs/fpga_api/fpga_api.html#c.MB">MB (C macro)</a>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N12metric_value6bvalueE">metric_value::bvalue (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N12metric_value6dvalueE">metric_value::dvalue (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N12metric_value6fvalueE">metric_value::fvalue (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N12metric_value6ivalueE">metric_value::ivalue (C++ member)</a>
 </li>
   </ul></td>
 </tr></table>
