Travis build: Update Documentation under travis build : 4657

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -430,6 +430,8 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv211fpga_metric">fpga_metric (C++ class)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N11fpga_metric7isvalidE">fpga_metric::isvalid (C++ member)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N11fpga_metric10metric_numE">fpga_metric::metric_num (C++ member)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N11fpga_metric5valueE">fpga_metric::value (C++ member)</a>
