Travis build: Update Documentation under travis build : 4681

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -570,6 +570,8 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv218fpgaGetMetricsInfo11fpga_handleP16fpga_metric_infoP8uint64_t">fpgaGetMetricsInfo (C++ function)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv227fpgaGetMetricsThresholdInfo11fpga_handleP16metric_thresholdP8uint32_t">fpgaGetMetricsThresholdInfo (C++ function)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv217fpgaGetNumMetrics11fpga_handleP8uint64_t">fpgaGetNumMetrics (C++ function)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv214fpgaGetNumUmsg11fpga_handleP8uint64_t">fpgaGetNumUmsg (C++ function)</a>
@@ -770,12 +772,30 @@
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#c.MB">MB (C macro)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv216metric_threshold">metric_threshold (C++ class)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16metric_threshold10hysteresisE">metric_threshold::hysteresis (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16metric_threshold17lower_c_thresholdE">metric_threshold::lower_c_threshold (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16metric_threshold18lower_nc_thresholdE">metric_threshold::lower_nc_threshold (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16metric_threshold18lower_nr_thresholdE">metric_threshold::lower_nr_threshold (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16metric_threshold11metric_nameE">metric_threshold::metric_name (C++ member)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16metric_threshold17upper_c_thresholdE">metric_threshold::upper_c_threshold (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16metric_threshold18upper_nc_thresholdE">metric_threshold::upper_nc_threshold (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N16metric_threshold18upper_nr_thresholdE">metric_threshold::upper_nr_threshold (C++ member)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv212metric_value">metric_value (C++ type)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N12metric_value6bvalueE">metric_value::bvalue (C++ member)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N12metric_value6dvalueE">metric_value::dvalue (C++ member)</a>
 </li>
       <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N12metric_value6fvalueE">metric_value::fvalue (C++ member)</a>
@@ -1304,8 +1324,16 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="docs/fpga_api/fpga_api.html#c.TEST_TIMEOUT">TEST_TIMEOUT (C macro)</a>
 </li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv29threshold">threshold (C++ class)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N9threshold8is_validE">threshold::is_valid (C++ member)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N9threshold14threshold_nameE">threshold::threshold_name (C++ member)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_api.html#_CPPv2N9threshold5valueE">threshold::value (C++ member)</a>
+</li>
       <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.token">token (class in opae.fpga)</a>
 </li>
   </ul></td>
