--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@ documentation:</h3>
 
   <li><a href="1.3.0/index.html">1.3.0</a></li>
 
+  <li><a href="rot/index.html">latest</a></li>
+
   <li><a href="latest/index.html">latest</a></li>
 
 
