Travis build: Update Documentation under travis build : 6033

--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -204,8 +204,261 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#_"><strong>_</strong></a>
+ | <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#H"><strong>H</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#O"><strong>O</strong></a>
+ | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
+ | <a href="#V"><strong>V</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
+<h2 id="_">_</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.__enter__">__enter__() (opae.fpga.handle method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.__exit__">__exit__() (opae.fpga.handle method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.sysobject.__getattr__">__getattr__() (opae.fpga.sysobject method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.sysobject.__getitem__">__getitem__() (opae.fpga.sysobject method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.__init__">__init__() (opae.fpga.properties method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.accelerator_state">accelerator_state (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.allocate_shared_buffer">allocate_shared_buffer() (in module opae.fpga)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.bbs_id">bbs_id (opae.fpga.properties attribute)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.bbs_version">bbs_version (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.bus">bus (opae.fpga.properties attribute)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.sysobject.bytes">bytes() (opae.fpga.sysobject method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.error.can_clear">can_clear (opae.fpga.error attribute)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.capabilities">capabilities (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.close">close() (opae.fpga.handle method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer.compare">compare() (opae.fpga.shared_buffer method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.device">device (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.enumerate">enumerate() (in module opae.fpga)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.error">error (class in opae.fpga)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.errors">errors() (in module opae.fpga)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.event">event (class in opae.fpga)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer.fill">fill() (opae.fpga.shared_buffer method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.sysobject.find">find() (opae.fpga.sysobject method)</a>
+
+      <ul>
+        <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.token.find">(opae.fpga.token method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.function">function (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle">handle (class in opae.fpga)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.model">model (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.error.name">name (opae.fpga.error attribute)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.num_interrupts">num_interrupts (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.num_mmio">num_mmio (opae.fpga.properties attribute)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.num_slots">num_slots (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.object_id">object_id (opae.fpga.properties attribute)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#module-opae.fpga">opae.fpga (module)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.open">open() (in module opae.fpga)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.event.os_object">os_object() (opae.fpga.event method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.parent">parent (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties">properties (class in opae.fpga)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.sysobject.read64">read64() (opae.fpga.sysobject method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.read_csr32">read_csr32() (opae.fpga.handle method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.read_csr64">read_csr64() (opae.fpga.handle method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.error.read_value">read_value() (opae.fpga.error method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.register_event">register_event() (in module opae.fpga)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.reset">reset() (opae.fpga.handle method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer">shared_buffer (class in opae.fpga)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer.size">size() (opae.fpga.shared_buffer method)</a>
+
+      <ul>
+        <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.sysobject.size">(opae.fpga.sysobject method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.socket_id">socket_id (opae.fpga.properties attribute)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.sysobject">sysobject (class in opae.fpga)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.token">token (class in opae.fpga)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.properties.vendor_id">vendor_id (opae.fpga.properties attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.sysobject.write64">write64() (opae.fpga.sysobject method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.write_csr32">write_csr32() (opae.fpga.handle method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.handle.write_csr64">write_csr64() (opae.fpga.handle method)</a>
+</li>
+      <li><a href="docs/fpga_api/fpga_python_api.html#opae.fpga.shared_buffer.wsid">wsid() (opae.fpga.shared_buffer method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
            </div>
