--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ documentation:</h3>
 
   <li><a href="2.0.0/index.html">2.0.0</a></li>
 
-  <li><a href="latest/index.html">latest</a></li>
+  <li><a href="2.0.0/index.html">latest</a></li>
 
   <li><a href="rot/index.html">rot</a></li>
 
