--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@ documentation:</h3>
 
   <li><a href="2.0.0/index.html">2.0.0</a></li>
 
+  <li><a href="2.0.9/index.html">2.0.9</a></li>
+
   <li><a href="2.0.0/index.html">latest</a></li>
 
   <li><a href="rot/index.html">rot</a></li>
