doc: update opae doc
Signed-off-by: anandaravuri <ananda.ravuri@intel.com>

--- a/index.html
+++ b/index.html
@@ -20,13 +20,8 @@ managing and accessing programmable accelerators (FPGAs). Its main parts
 are:</p>
 
 <ul>
-    <li> - The OPAE Software Development Kit (OPAE SDK),</li>
-    <li> - The OPAE Linux driver for Intel(R) Xeon(R) CPU with Integrated
-    FPGAs and Intel(R) PAC with Arria(R) 10 GX FPGA</li>
-    <li> - The Basic Building Block (BBB) library for accelerating AFU
-    development (not part of the OPAE release, but pre-release code is
-    available on GitHub:
-    <a href="https://github.com/OPAE/intel-fpga-bbb">Intel FPGA BBB</a></li>
+    <li> - The OPAE Software Development Kit (OPAE SDK).</li>
+    <li> - IntelÂ® FPGA DFL Linux driver. </li>
     </ul>
 <p> </p>
 <p>OPAE is under active development to extend to more hardware platforms,
@@ -40,13 +35,10 @@ are:</p>
     It provides a library implementing the OPAE C API for presenting
     a streamlined and easy-to-use interface for software applications
     to discover, access, and manage FPGA devices and accelerators using
-     the OPAE software stack. The OPAE SDK also includes the AFU Simulation
-      Environment (ASE) for end-to-end simulation of accelerator RTL together
-       with software applications using the OPAE C API.
-    OPAE's goal is to accelerate FPGA adoption. It is a community effort
-     to simplify the development and deployment of FPGA applications, so
-     we explicitly welcome discussions and contributions! The OPAE SDK
-      source, unless otherwise noted, is released under a BSD 3-clause
+    the OPAE software stack. OPAE's goal is to accelerate FPGA adoption.
+    It is a community effort to simplify the development and deployment
+    of FPGA applications, so we explicitly welcome discussions and contributions!. 
+     The OPAE SDK source, unless otherwise noted, is released under a BSD 3-clause
       license.
 </p>
 
