doc: update doc
Signed-off-by: anandaravuri <ananda.ravuri@intel.com>

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ are:</p>
 
 <ul>
     <li> - The OPAE Software Development Kit (OPAE SDK).</li>
-    <li> - IntelÂ® FPGA DFL Linux driver. </li>
+    <li> - Intel® FPGA DFL Linux driver. </li>
     </ul>
 <p> </p>
 <p>OPAE is under active development to extend to more hardware platforms,
